Bug 101383 - MAILMERGE: Crash when trying to set up email (from MM toolbar)
Summary: MAILMERGE: Crash when trying to set up email (from MM toolbar)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2016-08-08 10:43 UTC by Buovjaga
Modified: 2016-08-09 19:38 UTC (History)
0 users

See Also:
Crash report or crash signature: ["mergedlo.dll"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2016-08-08 10:43:00 UTC
1. Launch writer and open MM toolbar from View
2. Click the MM wizard button and cancel out
3. Now that all the toolbar buttons get activated, click Send email messages
4. Click Send documents and answer Yes to the question on setting up email
Now it should crash.

Win 7 Pro 64-bit Version: 5.3.0.0.alpha0+ (x64)
Build ID: f4d0818cd21f66b0d7f36f820fcf1b72e506e026
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2016-08-07_09:21:35
Locale: fi-FI (fi_FI); Calc: CL

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: c1b665fcdacd4141137f1e369527e2c0d94513ae
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on July 26th 2016
Comment 1 Buovjaga 2016-08-08 10:43:33 UTC
GDB trace in attachment 126522 [details]
Comment 3 Buovjaga 2016-08-09 17:55:02 UTC
Verifying fix.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: 5d8639aaf2f60157c99c3ee3a8bfa78e4efd010a
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on August 9th 2016
Comment 4 Commit Notification 2016-08-09 19:38:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=07544ac6c4f426db76bf70eb10e4fd4c6ae4a234

Resolves: tdf#101383 don't crash is merge has no targetview on mail setup

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.