Resolves: tdf#101383 don't crash is merge has no targetview on mail setup

Change-Id: I7d5d97443a64e2fe99d575e0e59914777f1723c4